Spacing fixes

--- a/global.css
+++ b/global.css
@@ -827,6 +827,10 @@ select {
   margin-top: 0.5rem;
 }
 
+.mt-20 {
+  margin-top: 5rem;
+}
+
 .block {
   display: block;
 }
